website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.28/concepts/safety.md
---
title: Конфиденциальность, правила игнорирования и безопасность
sidebar_position: 7
description: Правила игнорирования, шлюзы утверждения, хэши и профили защищают приватный контекст от случайного захвата.
---

# Конфиденциальность, правила игнорирования и безопасность

Engram является приватным по умолчанию. Несколько уровней защищают приватный контекст от утечки в долговечную память или за границы профиля.

## Шлюз утверждения (Approval gate)

Запись требует утверждения человеком. Агенты предлагают кандидатов; люди одобряют, отклоняют, редактируют или архивируют. Прямой интерфейс CLI в терминале использует A/B/C. Чат ИИ-агента использует `yes` / `audit` / `cancel`.

## Правила игнорирования (Ignore rules)

Правила игнорирования — это средства управления конфиденциальностью. Они скрывают нерелевантные или конфиденциальные записи от маршрутизации. Настройте их в `.engramignore` и в конфигурации памяти рабочего пространства, чтобы приватные пути и шаблоны никогда не попадали в индекс.

## Хэши (Hashes)

Хэши — это проверки целостности. Они выполняются перед выводом содержимого и выявляют небезопасные изменения, сделанные в обход стандартного процесса записи.

## Профили (Profiles)

Профили изолируют память компании, клиентов и личные данные, чтобы внешние API или предоставленные компанией агенты не допускали утечки контекста между проектами. См. [Профили и разрешение областей видимости](profiles.md).

## Сканирование на секреты и инъекции

При сохранении Engram проверяет:

- валидацию схемы
- сканирование секретов (secret scan)
- шаблоны внедрения подсказок (prompt-injection)
- безопасность путей

## Ограничения, о которых следует знать

Поиск в Engram по умолчанию — это детерминированный лексический поиск. Команда `engram search --semantic` добавляет детерминированное локальное сходство, а не семантический поиск на основе эмбеддингов (embedding-backed semantic search). Векторы графа — это локальные хэшированные векторы слов, а не семантические эмбеддинги. Обнаружение противоречий носит рекомендательный характер. Конфигурация шифрования существует, но зашифрованное хранилище еще не реализовано.

Эти ограничения указаны намеренно. Engram должен четко сообщать пользователям, что работает на сегодняшний день, а что является планом на будущее.

## Следующие шаги

- [Путь записи и утверждение](./write-path.md)
- [Устранение неполадок в работе](../operations/troubleshooting.md)

<!-- evidence-foundation:v3:start -->
## Память, подкреплённая доказательствами

New files use `schema_version: 3`. Rule and skill memories default to `authority: instruction`; knowledge defaults to `authority: reference`. `revision` starts at 1 and increments on updates. Trace IDs belong in `evidence_refs`, while session or source identities belong in `derived_from`. Legacy v1 (`Context` + `Content` + `Example`) and v2 (`Content`, optional `Origin`) remain readable. Traces live in `.agents/.engram/traces/` with `traces/<trace-id>.jsonl` files recording `engram observe --file` and `save-session --file` provenance, `trust_level`, `sensitivity`, and `retention`.
<!-- evidence-foundation:v3:end -->
